Stop setting remediationAction at the root policy level
This allows the policy generator to have granular control of the
remediation action of configuration policies it may automatically
generator on behalf of the user (i.e. Kyverno policy reporting).

Signed-off-by: mprahl <mprahl@users.noreply.github.com>

--- a/docs/policygenerator-reference.yaml
+++ b/docs/policygenerator-reference.yaml
@@ -36,8 +36,8 @@ policyDefaults:
     # file. If given, this placement rule will be used by all policies by default. (See
     # clusterSelectors to generate a new Placement instead.)
     placementRulePath: ""
-  # Optional. The remediation action ("inform" or "enforce") for the policy. This defaults to
-  # "inform".
+  # Optional. The remediation action ("inform" or "enforce") for each configuration policy. This
+  # defaults to "inform".
   remediationAction: "inform"
   # Optional. The severity of the policy violation. This defaults to "low".
   severity: "low"
