--- a/docs/policygenerator-reference.yaml
+++ b/docs/policygenerator-reference.yaml
@@ -21,6 +21,10 @@ policyDefaults:
   # annotation. This defaults to ["CM-2 Baseline Configuration"].
   controls:
     - "CM-2 Baseline Configuration"
+  # Optional. Default value true will consolidate multi manifests 
+  # specified in policyConf into single policy template. 
+  # Set to false will skip this consolidation.
+  consolidatedManifests: true
   # Optional. When the policy references a Kyverno policy manifest, this determines if an additonal
   # configuration policy should be generated in order to receive policy violations in Open Cluster
   # Management when the Kyverno policy has been violated. This defaults to true.
@@ -91,6 +95,8 @@ policies:
     disabled: false
     # Optional. (See policyDefaults.informKyvernoPolicies for description.)
     informKyvernoPolicies: true
+    # Optional. (See policyDefaults.consolidatedManifests for description.)
+    consolidatedManifests: true
     # Optional. Determines the list of namespaces to check on the cluster for the given manifest. If
     # a namespace is specified in the manifest, the selector is not necessary. This defaults to no
     # selectors.
