Add-option-to-not-consolidate-under-single-ConfigurationPolicy-#15836 (#13)
* Add-option-to-not-consolidate-under-single-ConfigurationPolicy-#15836

Signed-off-by: Chunxi Luo chuluo@redhat.com
Signed-off-by: ChunxiAlexLuo <55596988+ChunxiAlexLuo@users.noreply.github.com>

* polish

Signed-off-by: Chunxi Luo chuluo@redhat.com
Signed-off-by: ChunxiAlexLuo <55596988+ChunxiAlexLuo@users.noreply.github.com>

* update comments and naming

Signed-off-by: Chunxi Luo chuluo@redhat.com
Co-Authored-By: Matt Prahl <mprahl@users.noreply.github.com>

Co-authored-by: Matt Prahl <mprahl@users.noreply.github.com>

--- a/docs/policygenerator-reference.yaml
+++ b/docs/policygenerator-reference.yaml
@@ -21,6 +21,11 @@ policyDefaults:
   # annotation. This defaults to ["CM-2 Baseline Configuration"].
   controls:
     - "CM-2 Baseline Configuration"
+  # Optional. This determines if a single configuration policy should be
+  # generated for all the manifests being wrapped in the policy.
+  # If set to false, a configuration policy per manifest will be generated.
+  # This defaults to true.
+  consolidateManifests: true
   # Optional. When the policy references a Kyverno policy manifest, this determines if an additonal
   # configuration policy should be generated in order to receive policy violations in Open Cluster
   # Management when the Kyverno policy has been violated. This defaults to true.
@@ -91,6 +96,8 @@ policies:
     disabled: false
     # Optional. (See policyDefaults.informKyvernoPolicies for description.)
     informKyvernoPolicies: true
+    # Optional. (See policyDefaults.consolidateManifests for description.)
+    consolidateManifests: true
     # Optional. Determines the list of namespaces to check on the cluster for the given manifest. If
     # a namespace is specified in the manifest, the selector is not necessary. This defaults to no
     # selectors.
