--- a/docs/policygenerator-reference.yaml
+++ b/docs/policygenerator-reference.yaml
@@ -70,19 +70,19 @@ policies:
         # and metadata.namespace (if applicable) fields to be set so Kustomize
         # can identify the manifest the patch applies to.
         patches:
-          # Optional: Only required when there are multiple manifests in the path.
-          apiVersion: ""
-          # Optional: Only required when there are multiple manifests in the path.
-          kind: ""
-          metadata:
             # Optional: Only required when there are multiple manifests in the path.
-            name: ""
-            # Optional: Only required when there are multiple manifests in the path and it's a
-            # manifest to a namespaced resource.
-            namespace: ""
-            # An example modification to the manifest
-            annotations:
-              friends-character: Chandler Bing
+          - apiVersion: ""
+            # Optional: Only required when there are multiple manifests in the path.
+            kind: ""
+            metadata:
+              # Optional: Only required when there are multiple manifests in the path.
+              name: ""
+              # Optional: Only required when there are multiple manifests in the path and it's a
+              # manifest to a namespaced resource.
+              namespace: ""
+              # An example modification to the manifest
+              annotations:
+                friends-character: Chandler Bing
     # Optional. (See policyDefaults.categories for description.)
     categories:
       - "CM Configuration Management"
