Add placement generation for policy sets. Refactor `createPlacement` and `createPlacementBinding` methods to generate placement and placement binding when policy sets are defined.
Signed-off-by: Yu Cao <ycao@redhat.com>

--- a/examples/policyGenerator.yaml
+++ b/examples/policyGenerator.yaml
@@ -62,5 +62,9 @@ policySets:
   description: this is a kyverno policy set.
   policies:
     - pre-exists-kyverno-policy
+  placement:
+    placementRulePath: input/placementrule.yaml
 - name: policyset-gatekeeper
   description: this is a gatekeeper policy set.
+  placement:
+    placementRulePath: input/placementrule.yaml
