--- a/examples/input/placement.yaml
+++ b/examples/input/placement.yaml
@@ -1,4 +1,4 @@
-apiVersion: cluster.open-cluster-management.io/v1alpha1
+apiVersion: cluster.open-cluster-management.io/v1beta1
 kind: Placement
 metadata:
   labels:
@@ -7,7 +7,7 @@ metadata:
   namespace: my-policies
 spec:
   predicates:
-    requiredClusterSelector:
+  - requiredClusterSelector:
       labelSelector:
         matchExpressions:
           - key: cloud
