--- a/examples/policyGenerator.yaml
+++ b/examples/policyGenerator.yaml
@@ -57,6 +57,17 @@ policies:
     - path: input-gatekeeper/
   policySets:
     - policyset-gatekeeper
+- name: policy-limitclusteradmin
+  categories:
+    - AC Access Control
+  controls:
+    - AC-3 Access Enforcement
+  standards:
+    - NIST SP 800-53 
+  manifests:
+    - path: input-policy-type/iam.yaml
+  policySets:
+    - policyset-iam
 policySets:
 - name: policyset-kyverno
   description: this is a kyverno policy set.
@@ -68,3 +79,5 @@ policySets:
   description: this is a gatekeeper policy set.
   placement:
     placementRulePath: input/placementrule.yaml
+- name: policyset-iam
+  description: this is a iam policy set.
