Add ability to run in a container as a KRM plugin
When run as a container by kustomize (by setting an annotation in the
generator yaml), kustomize will send the configuration and other inputs
to the process via stdin. New code converts that input into the format
that the generator currently expects.

The examples here should make it more clear.

Signed-off-by: Justin Kulikauskas <jkulikau@redhat.com>

--- a/examples/transformer/kustomization.yaml
+++ b/examples/transformer/kustomization.yaml
@@ -1,3 +1,6 @@
+# run this example with `kustomize build . --enable-alpha-plugins > output.yaml`
+# Note: you must have the plugin installed to your kustomize plugin directory.
+
 resources:
 - github.com/redhat-cop/gitops-catalog/advanced-cluster-management/operator/overlays/release-2.5?ref=main
 transformers:
