Separate PolicySet placement generation
Allow setting of a `PolicySetDefaults` placement name for placement
consolidation. The caveat here is consolidation will default to any
Policy placement that had previously been consolidated.

Signed-off-by: Dale Haiducek <19750917+dhaiducek@users.noreply.github.com>

--- a/docs/policygenerator-reference.yaml
+++ b/docs/policygenerator-reference.yaml
@@ -161,7 +161,8 @@ policyDefaults:
 # policySets array.
 policySetDefaults:
   # Optional. The placement configuration for the policy sets. This defaults to a placement configuration that matches
-  # all clusters. (See policyDefaults.placement for description.)
+  # all clusters. If a placement.name is not provided here for placement consolidation, it will fall back to
+  # policyDefaults.placement.name, if provided there. (See policyDefaults.placement for description.)
   placement: {}
   # Optional. Whether to generate placement manifests for policy sets. This defaults to "true".
   generatePolicySetPlacement: true
