--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+        # Ref: https://github.com/actions/checkout/issues/290
+      - name: Fetch annotated tag
+        run: |
+          git fetch origin ${{ github.ref }}:${{ github.ref }} --tags --force
+
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
